# nemo

./: .gitignore  .pre-commit-config.yaml  =2.0.0  CONFIG_EXAMPLES.md  LICENSE  README.md  backtest_demo.py  config.yaml  copilot-instructions.md  demo.py  integration_demo.py  mypy.ini  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CI.md  DEPLOYMENT.md
src/: __init__.py  main.py
src/common/: __init__.py  config.py  models.py  provider_base.py  provider_factory.py
src/providers/: __init__.py
src/providers/alpaca/: __init__.py  data.py  trade.py
src/providers/gemini/: __init__.py  data.py  historical.py  trade.py
src/strategy/: __init__.py  backtest.py  llm_gate.py  risk.py  trigger.py  vwap.py
tests/: __init__.py  test_config.py  test_main.py
tests/common/: __init__.py  test_models.py  test_provider_base.py  test_provider_factory.py
tests/providers/: __init__.py
tests/providers/alpaca/: __init__.py  test_data.py  test_trade.py
tests/providers/gemini/: __init__.py  test_data.py  test_trade.py
tests/strategy/: __init__.py  test_backtest.py  test_risk.py  test_trigger.py  test_vwap.py
